--- a/Mini fb/register.html
+++ b/Mini fb/register.html
@@ -8,7 +8,7 @@
         <table border="1">
             <tr>
                 <td><label>ФИО</label></td>
-                <td><input type="text"></td>
+                <td><input type="text" maxlength="20"></td>
             </tr>
             <tr>
                 <td><label>Пароль</label></td>
@@ -27,14 +27,15 @@
             </tr>
             <tr>
                 <td><label>Адрес email</label></td>
-                <td><input type="email"></td>
+                <td><input type="email" required></td>
             </tr>
             <tr>
                 <td><label>Что Вас привело сюда</label></td>
                 <td><textarea></textarea></td>
             </tr>
             <tr>
-                <td colspan="2"><input type="checkbox">Я согласен с условиями данной политики</td>
+                <td colspan="2"><input type="checkbox" required> 
+                    <a href="requirements.html" target="_blank">Я согласен с условиями данной политики</a></td>
             </tr>
             <tr>
                 <td colspan="2"><button type="submit">Go</button></td>
